[package]
name = "vulkan-cts-analyzer"
version = "0.1.0"
authors = ["Kbz-8 <kbz_8.code@proton.me>"]
edition = "2021"

[dependencies]
csv = "1.4.0"
dioxus = { version = "0.7.2", features = ["router"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
