[package]
name = "vulkan-cts-analyzer"
version = "0.1.0"
authors = ["Kbz-8 <kbz_8.code@proton.me>"]
edition = "2024"

[dependencies]
csv = "1.4.0"
dioxus = { version = "0.7.2", features = ["router"] }
dioxus-sdk-time = "0.7.0"
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
reqwest = "0.12.25"
strum = { version = "0.27.2", default-features = false, features = ["derive"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
